syntax = "proto3";

option csharp_namespace = "GRPC_Server.Protos";
message ContractRequest {
  string contract_id = 1;
  string title = 2;

}
message ContractResponse {
  string contract_id = 1;
  string title = 2;
  string status = 3;
}
service ContractService {
  rpc GetContract (ContractRequest) returns (ContractResponse);
}